@@ -1,4 +1,5 @@
 = 4.5.8 - 28.03.2022 =
+Fixed: Upgrade to PRO now disappears when all extensions installed ( https://github.com/WPChill/download-monitor/issues/875 )
 
 = 4.5.7 - 21.03.2022 =
 Changed: Removed Download Duplicator from LITE vs PRO page ( https://github.com/WPChill/download-monitor/issues/872 )
